--- a/client/src/pages/Shop.css
+++ b/client/src/pages/Shop.css
@@ -1,11 +1,8 @@
 
 .popular-sales { 
-    margin-left: 64px;
-    width: 1168px;
-    display: flex; 
-    justify-content: space-between; 
-    gap: 20px; 
-    font-weight: 600; 
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
   } 
 
   @media (max-width: 991px) { 
@@ -53,12 +50,11 @@
   } 
 
   .cards{
-    width: 30%;
     float: left;
     padding: 10px;
     box-sizing: border-box;
     display: flex;
-    justify-content: space-between; 
+    flex-wrap: wrap;
   }
 
   .popular{
@@ -69,8 +65,6 @@
   }
   .canopolyhan{
     display: block;
-    width: 370px;
-    max-width: 100%;
   }
   .headerbek {
     text-align: center;
@@ -88,15 +82,20 @@
   }
 
   .canopolybek{
-    margin-left: 55px;
     display: block;
-    width: 370px;
-    max-width: 100%;
   }
 
   .cardsbek{
-    width: 30%;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: space-between; 
+    width: 100%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+
+  }
+
+  .container{
+    width: 1168px;
+    margin: 0 auto;
+    padding: 0px 10px;
   }
