--- a/client/src/pages/Shop.css
+++ b/client/src/pages/Shop.css
@@ -1,101 +1,102 @@
 
 .popular-sales { 
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
+  margin-left: 64px;
+  width: 1168px;
+  display: flex; 
+  justify-content: space-between; 
+  gap: 20px; 
+  font-weight: 600; 
+} 
+
+@media (max-width: 991px) { 
+  .popular-sales { 
+    flex-wrap: wrap; 
+    
   } 
+} 
 
-  @media (max-width: 991px) { 
-    .popular-sales { 
-      flex-wrap: wrap; 
-      
-    } 
-  } 
+.headingbek { 
+  color: #1d1d1d; 
+  font: 500 30px/120% Inter, -apple-system, Roboto, Helvetica, sans-serif;
+} 
 
-  .headingbek { 
-    color: #1d1d1d; 
-    font: 500 30px/120% Inter, -apple-system, Roboto, Helvetica, sans-serif;
-  } 
+.view-more-containerbek { 
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  display: flex; 
+  gap: 4px; 
+  margin: auto 0; 
+  padding: 0 3px 0 20px; 
+  font-size: 16px; 
+  color: #222; 
+  line-height: 150%; 
+  justify-content: space-between; 
+} 
 
-  .view-more-containerbek { 
-    font-family: Inter, sans-serif;
-    font-weight: 400;
-    display: flex; 
-    gap: 4px; 
-    margin: auto 0; 
-    padding: 0 3px 0 20px; 
-    font-size: 16px; 
-    color: #222; 
-    line-height: 150%; 
-    justify-content: space-between; 
-  } 
+.view-morebek { 
+  font-family: Inter, sans-serif; 
+  background: none; 
+  border: none; 
+  cursor: pointer; 
+  padding: 0; 
+  margin: 0; 
+  color: black; 
+  font: inherit; 
+} 
 
-  .view-morebek { 
-    font-family: Inter, sans-serif; 
-    background: none; 
-    border: none; 
-    cursor: pointer; 
-    padding: 0; 
-    margin: 0; 
-    color: black; 
-    font: inherit; 
-  } 
+.arrow-iconbek { 
+  aspect-ratio: 1.22; 
+  object-fit: auto; 
+  object-position: center; 
+  width: 17px; 
+  margin: auto 0; 
+} 
 
-  .arrow-iconbek { 
-    aspect-ratio: 1.22; 
-    object-fit: auto; 
-    object-position: center; 
-    width: 17px; 
-    margin: auto 0; 
-  } 
-
-  .cards{
-    float: left;
-    padding: 10px;
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .popular{
-    height: 435px;
-    width: 1169px;
-    display: flex; 
-    justify-content: space-between; 
-  }
-  .canopolyhan{
-    display: block;
-  }
-  .headerbek {
-    text-align: center;
-  }
-  .titlebek {
-    color: #1d1d1d;
-    font: 500 30px/120% Inter, -apple-system, Roboto, Helvetica, sans-serif;
-  }
-
-  .popularbek{
-    height: 435px;
-    width: 1169px;
-    display: flex; 
-    justify-content: space-between; 
-  }
-
-  .canopolybek{
-    display: block;
-  }
-
-  .cardsbek{
-    width: 100%;
+.cards{
+  width: 30%;
+  float: left;
+  padding: 10px;
   box-sizing: border-box;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  justify-content: space-between; 
+}
 
-  }
+.popular{
+  height: 435px;
+  width: 1169px;
+  display: flex; 
+  justify-content: space-between; 
+}
+.canopolyhan{
+  display: block;
+  width: 370px;
+  max-width: 100%;
+}
+.headerbek {
+  text-align: center;
+}
+.titlebek {
+  color: #1d1d1d;
+  font: 500 30px/120% Inter, -apple-system, Roboto, Helvetica, sans-serif;
+}
 
-  .container{
-    width: 1168px;
-    margin: 0 auto;
-    padding: 0px 10px;
-  }
+.popularbek{
+  height: 435px;
+  width: 1169px;
+  display: flex; 
+  justify-content: space-between; 
+}
+
+.canopolybek{
+  margin-left: 55px;
+  display: block;
+  width: 370px;
+  max-width: 100%;
+}
+
+.cardsbek{
+  width: 30%;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between; 
+}
