--- a/client/src/pages/Shop.css
+++ b/client/src/pages/Shop.css
@@ -3,13 +3,14 @@
 }
 
 body, html {
+  background-color: #f6f6f6;
   padding: 0;
   margin: 0;
+
 }
 
 .popular-sales {
-  margin: 0 auto;
-  max-width: 1168px;
+
   display: flex;
   justify-content: space-between;
   gap: 20px;
@@ -18,6 +19,7 @@ body, html {
 }
 
 .headingbek {
+  padding-left: 38px;
   color: #1d1d1d;
   font: 500 30px/120% 'Inter', -apple-system, Roboto, Helvetica, sans-serif;
 }
@@ -44,6 +46,7 @@ body, html {
   margin: 0;
   color: black;
   font: inherit;
+  
 }
 
 .arrow-iconbek {
@@ -55,7 +58,6 @@ body, html {
 }
 
 .cards, .cardsbek {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -72,9 +74,7 @@ body, html {
 
 .canopolyhan, .canopolybek {
   display: block;
-  width: calc(25% - 20px);
   margin: 10px;
-  max-width: 100%;
 }
 
 .headerbek {
