--- a/client/src/pages/about.css
+++ b/client/src/pages/about.css
@@ -21,7 +21,7 @@
 
 .about-content {
   align-self: center;
-  margin-top: 40px;
+  margin-top: 0px;
 }
 
 .about-columns {
@@ -41,8 +41,9 @@
   display: flex;
   flex-direction: column;
   line-height: normal;
-  width: 50%;
-  margin-left: 0px;
+  height: 35%;
+  width: 35%;
+  padding-left: 30px;
 }
 
 @media (max-width: 991px) {
@@ -55,7 +56,7 @@
   aspect-ratio: 1.02;
   object-fit: auto;
   object-position: center;
-  width: 100%;
+
   flex-grow: 1;
 }
 
